# Chess2022

./: CMakeLists.txt  a.txt.gpg
include/AI/: AlphaBeta.h  Computer.h  Greedy.h  Minimax.h  Random.h
include/Algorithms/: LegalMoveGenerator.h  MoveGenerator.h  PseudoLegalMoveGenerator.h
include/DataStructures/: Bitboard.h  BoardState.h  Game.h  Move.h  Square.h
include/Utility/: constants.h  limits.h
include/Utility/Bitwise/: bitscan.h  common.h  pawns.h  pieces.h  tables.h
src/: main.cpp
src/DataStructures/: BoardState.cpp  Game.cpp
